--- a/project6/styles.css
+++ b/project6/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 #home p {
-    font-family: 'Cinzel', cursive;
+    font-family: 'Cinzel', elegant;
     font-size: 25px;
 }
 nav {
@@ -51,11 +51,11 @@ h1, h2, h3, h4, h5, h6 {
     text-shadow: 2px 2px 2px #ccc; 
 }
 p {
-    font-family: 'Cinzel', cursive; 
+    font-family: 'Cinzel', elegant; 
     font-size: 20px;
 }
 #home p {
-    font-family: 'Cinzel', cursive; 
+    font-family: 'Cinzel', elegant; 
     font-size: 20px;
     color: black;
     text-shadow: 2px 2px 2px #ccc
