--- a/IST322/stylescopy.css
+++ b/IST322/stylescopy.css
@@ -59,4 +59,17 @@ body {
     text-align: center;
     padding: 10px;
   }
+  .shopping-cart-icon {
+    font-size: 24px;
+    color: white;
+    margin-right: 30px; /* Adjust the margin as needed */
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 999; /* Ensure the icon is on top of other elements */
+  }
+  
+  @media only screen and (max-width: 600px) {
+    /* Your existing media query */
+  }
   
