--- a/IST322/styles.css
+++ b/IST322/styles.css
@@ -1,62 +1,98 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
-  }
-  
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+}
+
+header {
+  background-color: #007bff;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 20px;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+main {
+  padding: 20px;
+}
+
+.ps5-listing {
+  display: flex;
+  align-items: center;
+}
+
+.ps5-details {
+  margin-left: 20px;
+}
+
+button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+.shopping-cart-icon {
+  font-size: 24px;
+  color: white;
+  margin-right: 30px;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 999; 
+}
+
+@media only screen and (max-width: 600px)
+  {
   header {
-    background-color: #007bff;
-    color: white;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 20px;
-  }
-  
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  main {
-    padding: 20px;
-  }
-  
-  .ps5-listing {
-    display: flex;
-    align-items: center;
-  }
-  
-  .ps5-details {
-    margin-left: 20px;
-  }
-  
-  button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
     padding: 10px;
   }
+  nav ul li {
+    margin-right: 10px;
+  }
+  main {
+    padding: 10px;
+  }
+  section {
+    padding-bottom: 20px;
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  .button {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+  .shopping-cart-icon {
+    font-size: 20px;
+  }
   
+}
